[package]
name = "p2pim"
version = "0.1.0"
authors = ["Fernando Rincon <f.rincon@protonmail.com>"]
edition = "2018"

[dependencies]
clap = "3.1.12"
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.16"
num-bigint = "0.4.3"
p2pim-ethereum-contracts = { path = "../p2pim-ethereum-contracts"}
prost = "0.10.1"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
tonic = "0.7.1"
url = "2.2.2"
web3 = "0.18.0"

[build-dependencies]
tonic-build = "0.7.0"

[dev-dependencies]

[workspace]
members = [
  "grpc-client",
]
