[package]
name = "p2pim"
version = "0.1.0"
authors = ["Fernando Rincon <f.rincon@protonmail.com>"]
edition = "2018"

[dependencies]
asynchronous-codec = "0.6.0"
bigdecimal = "0.3.0"
chrono = "0.4.19"
clap = "3.1.12"
env_logger = "0.9.0"
ethcontract = "0.17.0"
futures = "0.3.21"
hex = "0.4.3"
libp2p = { version = "0.44.0", features = ["autonat",
  "deflate",
  "dns-tokio",
  "floodsub",
  "identify",
  "kad",
  "gossipsub",
  "mdns",
  "mplex",
  "noise",
  "ping",
  "plaintext",
  "pnet",
  "relay",
  "request-response",
  "rendezvous",
  "secp256k1",
  "tcp-tokio",
  "uds",
  "wasm-ext",
  "websocket",
  "yamux",
] }
log = "0.4.16"
num-bigint = "0.4.3"
parse_duration = "2.1.1"
p2pim-ethereum-contracts = { path = "../p2pim-ethereum-contracts" }
prost = "0.10.1"
prost-types = "0.10.1"
rand = "0.8.5"
secp256k1 = "0.21.3"
serde_json = "1.0.79"
sha3 = "0.10.1"
sled = "0.34.7"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
tonic = "0.7.1"
url = "2.2.2"
void = "1.0.2"
warp = "0.3.2"
web3 = "0.18.0"

[build-dependencies]
prost-build = "0.10.1"
tonic-build = "0.7.0"

[dev-dependencies]

[workspace]
members = [
  "grpc-client",
]
